# rustcodevisual

./: Cargo.toml  check_output.json  manual_cuda_improvements.md
src/: audio.rs  compositor.rs  config.rs  export.rs  fractals.rs  gpu_export.rs  gpu_render.rs  main.rs  offscreen_render.rs  particles.rs  postprocess.rs  presets.rs  spectrum.rs  waveform.rs
